Input label     - fix label alignment Tab     - fix line height     - black line appear between dots

--- a/packages/ui/src/components/InputLabel/styles.module.css
+++ b/packages/ui/src/components/InputLabel/styles.module.css
@@ -1,6 +1,6 @@
 .input-label {
     display: flex;
-    padding: 0 var(--go-ui-spacing-2xs);
+    padding: 0 var(--go-ui-spacing-sm);
     color: var(--go-ui-color-gray-70);
     gap: var(--go-ui-spacing-xs);
 
